// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SNAPSHOT should match snapshot for hover true 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="userList"
    id="488edda9-f042-434f-8162-e4dddf7055f5"
  >
    <img
      alt="Mrs Emily Mortensen"
      src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
    />
    <span
      className="user__title"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Mrs
    </span>
    <span
      className="user__first"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Emily
    </span>
    <span
      className="user__last"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Mortensen
    </span>
    <div
      className="tooltip"
      data-testid="tooltip"
      style={
        Object {
          "left": "10px",
          "position": "absolute",
          "top": "62px",
        }
      }
    >
      <div
        className="tooltip__arrow"
      />
      <span
        className="tooltip__title"
      >
        Mrs Emily Mortensen
      </span>
      <span
        className="tooltip__street"
      >
        8651 Tingstedet
      </span>
      <span
        className="tooltip__city"
      >
        Randers Nv
      </span>
    </div>
  </div>
</div>
`;

exports[`test SNAPSHOT should match the snapshot for hover false 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="userList"
    id="488edda9-f042-434f-8162-e4dddf7055f5"
  >
    <img
      alt="Mrs Emily Mortensen"
      src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
    />
    <span
      className="user__title"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Mrs
    </span>
    <span
      className="user__first"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Emily
    </span>
    <span
      className="user__last"
      style={
        Object {
          "fontSize": "12px",
        }
      }
    >
      Mortensen
    </span>
  </div>
</div>
`;
